Remove overflow of button sort divs to fix mobile view

--- a/client/src/components/Group/GroupStyles.css
+++ b/client/src/components/Group/GroupStyles.css
@@ -20,8 +20,14 @@
   padding: 0px !important;
 }
 
+.icon button {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 .sortRow {
   margin: 0 !important;
+  padding: 0 !important;
 }
 
 .sort:hover {
@@ -37,6 +43,10 @@
 
 .sortToolbar {
   overflow-x: hidden !important;
+}
+
+.sortToolbar > div {
+  margin: 0 !important;
 }
 
 .buttonDiv {
